refactor: java 23 to 17

--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,13 @@ plugins {
 
 group = 'org.forif'
 version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '17'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(23)
+        languageVersion = JavaLanguageVersion.of(17)
     }
 }
-
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
